build_result.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 4 errors
src\editor\main_editor.zig:541:30: error: no field or member function named 'renderLights' in 'rendering.RenderingSystem'
        self.rendering_system.renderLights();
        ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
src\rendering.zig:301:29: note: struct declared here
pub const RenderingSystem = struct {
                            ^~~~~~
referenced by:
    render: src\editor\main_editor.zig:321:56
    main: src\editor.zig:61:26
    4 reference(s) hidden; use '-freference-trace=6' to see all references
src\editor\main_editor.zig:966:38: error: root source file struct 'ecs.ecs' has no member named 'Transform'
        var render_q = query.with(ecs.Transform).with(ecs.Renderable).build() catch return;
                                  ~~~^~~~~~~~~~
src\ecs\ecs.zig:1:1: note: struct declared here
//! Entity Component System (ECS) - Main module re-export
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\scene.zig:140:50: error: unable to resolve comptime value
                    const mesh_slice = meshes[0..mesh_count];
                                                 ^~~~~~~~~~
src\scene.zig:140:50: note: slice of single-item pointer must have comptime-known bounds
src\scene.zig:262:19: error: root source file struct 'raylib_stub' has no member named 'drawModelEx'
            raylib.drawModelEx(model, pos, .{ .x = 0, .y = 1, .z = 0 }, rot.y, scl, raylib.Color.white);
            ~~~~~~^~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
error: 4 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 2/5 steps succeeded (1 failed)
install transitive failure
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 4 errors

error: the following build command failed with exit code 1:
.zig-cache\o\92f2af8c2753723feeadd90abb19e800\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xc0eaca8d -Z98a26a6ac4daf963
